--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       .other__anagram > .table__content {
         margin-top: 2rem;
+        margin-bottom: 5rem;
       }
     </style>
   </head>
