update onclick method

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <input type="text" id="string1" />
           <label for="string2">Input string dua</label>
           <input type="text" id="string2" />
-          <button type="button" id="submit" onClick="submitData()">
+          <button type="button" id="submit" onClick="submitAnagram()">
             Submit
           </button>
         </form>
@@ -66,7 +66,7 @@
         <form>
           <label for="string">Input string</label>
           <input type="text" id="string" />
-          <button type="button" id="submit" onClick="submitAnagram()">
+          <button type="button" id="submit" onClick="submitAllAnagram()">
             Submit
           </button>
         </form>
