--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <div class="home__content">
       <h1>Live sass compiler</h1>
-      <div class="column__1"></div>
-      <div class="column__2"></div>
-      <div class="column__3"></div>
+      <div class="box__content">
+        <div class="column__1"></div>
+        <div class="column__2"></div>
+        <div class="column__3"></div>
+      </div>
     </div>
   </body>
 </html>
