live sass compiler looping scss

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./public/css/app.css" />
+    <link rel="stylesheet" href="./public/css/app.min.css" />
   </head>
   <body>
     <div class="home__content">
       <h1>Live sass compiler</h1>
       <div class="box__content">
-        <div class="column__1"></div>
-        <div class="column__2"></div>
-        <div class="column__3"></div>
+        <div class="column__1">
+          <h1>Column1</h1>
+        </div>
+        <div class="column__2">
+          <h1>Column2</h1>
+        </div>
+        <div class="column__3">
+          <h1>Column3</h1>
+        </div>
       </div>
     </div>
   </body>
