css papper-fold

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Papper Folded</title>
+    <title>Papper Fold</title>
     <link rel="stylesheet" href="./public/css/app.min.css" />
   </head>
   <body>
     <div class="papper__fold">
-      <h4>Hallo World</h4>
+      <h4>This Papper</h4>
     </div>
   </body>
 </html>
