css papper-fold

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="papper__fold">
-      <h4>This Papper</h4>
+      <h4>Papper Fold</h4>
     </div>
   </body>
 </html>
